Fixed layout issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -472,7 +472,8 @@ main {
   background-color: #fff;
   display: flex;
   flex-direction: row;
-  justify-content: space-between; }
+  justify-content: space-between;
+  margin-bottom: 1em; }
   .dashboard--tab {
     color: #808080;
     background-color: #fff;
@@ -502,29 +503,17 @@ input[placeholder] {
   top: 5.5em; }
 
 .alert {
-  text-align: left;
-  border-radius: 3px;
-  font-size: 10px;
-  font-weight: 100;
-  letter-spacing: .5px;
-  margin-top: 1em;
-  padding-left: 10px;
-  width: 95%;
-  height: 5em;
-  color: #fff;
-  background-color: #7F54B0;
   display: flex;
   flex-direction: row;
-  justify-content: space-between; }
-  @media (min-width: 768px) {
-    .alert {
-      font-size: 12px;
-      height: 3em; } }
-  .alert__text--close {
-    font-weight: 400;
-    width: 3em; }
-    .alert__text--close:hover {
-      cursor: pointer; }
+  justify-content: space-between;
+  color: #fff;
+  font-weight: 100;
+  width: 90%;
+  border-radius: 5px;
+  background-color: #7F54B0;
+  padding: .5em; }
+  .alert__close:hover {
+    cursor: pointer; }
 
 .close-icon {
   transform: translateY(12px); }
