--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -89,6 +89,7 @@ main {
   @extend %main-font;
   @include flexy(flex, row);
   justify-content: space-between;
+  margin-bottom: 1em;
     &--tab {
       color: $dashboard-font;
       background-color: $white;
@@ -129,32 +130,20 @@ input[placeholder] {
 .alert {
   @extend %main-font;
   @extend %center;
-  text-align: left;
-  border-radius: 3px;
-  font-size: 10px;
-  font-weight: $font-weight--thin;
-  letter-spacing: .5px;
-  margin-top: 1em;
-  padding-left: 10px;
-  width: 95%;
-  height: 5em;
-  color: $white;
-  background-color: $main-color;
   @include flexy(flex, row);
   justify-content: space-between;
-  @include mq(medium) {
-    font-size: 12px;
-    height: 3em;
-  }
-    &__text--close {
-      font-weight: $font-weight--medium;
-      width: 3em;
-      &:hover {
-        cursor: pointer;
-      }
+  color: $white;
+  font-weight: $font-weight--thin;
+  width: 90%;
+  border-radius: 5px;
+  background-color: $main-color;
+  padding: .5em;
+    &__close:hover {
+      cursor: pointer;
     }
 
 }
+
 
 .close-icon {
   transform: translateY(12px);
